examples/eks-gateway-api/create-gateway.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-api

---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: external-http
  namespace: gateway-api
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
    - name: http-listener
      protocol: HTTP
      port: 80
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
        namespaces:
          from: All
    # - name: https-listener
    #   protocol: HTTPS
    #   port: 443      
    #   allowedRoutes:
    #     kinds:
    #       - kind: HTTPRoute
    #     namespaces:
    #       from: All             
  addresses:
    - type: NamedAddress
      value: <static-ip-name>
